[package]
name = "lobtamo"
version = "0.0.9"
license = "GPL-3.0"
keywords = ["education", "tamo"]
categories = ["api-bindings"]
edition = "2021"
build = false
description = "Interact with the TAMO education service"
repository = "https://github.com/sityvb/lobtamo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.15.1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4" }
reqwest = { version = "0.11.11", features = ["cookies", "json"]}
serde_json = "1"
serde = { version = "1.0.100", features = ["derive"] }
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
scraper = "0.13.0"
